[tool.poetry]
name = "py-sync"
version = "0.1.0"
description = "Python package prividing abstract layer for any ORM to synchronize local models."
authors = ["Radosław Skiba <radoslaw.skiba@amsterdamstandard.pl>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
